--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "core-js": "^3.1.4",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
+    "webpack-dev-server": "^3.8.0",
     "zone.js": "~0.10.1"
   },
   "devDependencies": {
