--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
     "webpack-dev-server": "^3.8.0",
-    "zone.js": "~0.10.1"
+    "zone.js": "^0.10.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.1",
