--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~8.2.1",
     "@angular/platform-browser-dynamic": "~8.2.1",
     "@angular/router": "~8.2.1",
+    "chart.js": "^2.8.0",
     "core-js": "^3.2.0",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
     "webpack-dev-server": "^3.8.0",
