--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.1.1",
     "@angular/router": "~10.1.1",
     "chart.js": "^2.9.3",
+    "compile-run": "^2.3.2",
     "core-js": "^3.6.5",
     "ng2-charts": "^2.4.1",
     "rxjs": "~6.6.3",
